--- a/analyzeAll.html
+++ b/analyzeAll.html
@@ -127,9 +127,15 @@ $(document).ready(function () {
 
 <div id="r-markdown" class="section level2">
 <h2>R Markdown</h2>
-<p>Exclude trials where target was not presented</p>
-<p>Exclude other cases where SPE not applicable * Response.Pos == False indicates either<br />
-** a) the participant reported “0” ** b) there was no target on that trial ** c) the participant reported a stimulus that was not presented</p>
+<p>Exclude trials where target was not presented.</p>
+<p>Exclude other cases where SPE not applicable, namely Response.pos == FALSE</p>
+<ul>
+<li>Response.Pos == False indicates either<br />
+</li>
+<li>the participant reported “0”</li>
+<li>there was no target on that trial</li>
+<li>the participant reported a stimulus that was not presented</li>
+</ul>
 <pre><code>## Loading objects:
 ##   allDays</code></pre>
 <pre><code>## 
@@ -140,6 +146,119 @@ $(document).ready(function () {
 <pre><code>## The following objects are masked from 'package:base':
 ## 
 ##     intersect, setdiff, setequal, union</code></pre>
+<p>Install the mixture modeling R library</p>
+<pre class="r"><code>#devtools::install_github('alexholcombe/mixRSVP',build_vignettes=TRUE)  #If want latest version
+library(mixRSVP)</code></pre>
+<p>Set up the experiment-specific parameters</p>
+<pre class="r"><code>numItemsInStream&lt;- 16 #from their Methods section  
+annotateIt&lt;-TRUE
+minSPE&lt;- -13 #targetSP = 14, subject reports first letter in stream (1)
+maxSPE&lt;- 13 #targetSP = 3 and response position is 16```</code></pre>
+<p>Ultimately want to analyze data broken down by: * Group (determines in which serial positions the targets appeared) * Condition (3-day, 2-day, 1-day) * targetSP (formerly known as TargPos (target position this trial)) * Block (epochs of trials basically) * Subject</p>
+<pre class="r"><code>condtnVariableNames &lt;- c(&quot;Group&quot;,&quot;Condition&quot;,&quot;targetSP&quot;, &quot;Block&quot;,&quot;Subject&quot;)  </code></pre>
+<pre><code>## Warning in bind_rows_(x, .id): Unequal factor levels: coercing to character</code></pre>
+<pre><code>## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector
+
+## Warning in bind_rows_(x, .id): binding character and factor vector,
+## coercing into character vector</code></pre>
+<pre><code>## # A tibble: 6 x 12
+## # Groups:   Group, Condition, targetSP, Block, Subject [6]
+##   Group Condition targetSP Block Subject efficacy latency precision   val
+##   &lt;int&gt; &lt;chr&gt;        &lt;int&gt; &lt;int&gt;   &lt;int&gt;    &lt;dbl&gt;   &lt;dbl&gt;     &lt;dbl&gt; &lt;dbl&gt;
+## 1     1 one_day          4     7      10    0.714   0.326 0.168      12.5
+## 2     1 one_day          4     7      11    0.882  -0.692 0.715      17.6
+## 3     1 one_day          4     7      12    0.619   0.321 0.167      16.3
+## 4     1 one_day          4     7      13    1.00   -0.368 1.03       16.3
+## 5     1 one_day          4     7      14    0.644   0.310 0.0000100  18.5
+## 6     1 one_day          4     7      15    0.253   0.426 0.0000100  25.1
+## # ... with 3 more variables: warnings &lt;chr&gt;, valGuessing &lt;dbl&gt;,
+## #   pLRtest &lt;dbl&gt;</code></pre>
+<pre><code>## # A tibble: 28 x 12
+## # Groups:   Group, Condition, targetSP, Block, Subject [28]
+##    Group Condition targetSP Block Subject efficacy latency precision   val
+##    &lt;int&gt; &lt;chr&gt;        &lt;int&gt; &lt;int&gt;   &lt;int&gt;    &lt;dbl&gt;   &lt;dbl&gt;     &lt;dbl&gt; &lt;dbl&gt;
+##  1     1 one_day          4     7      10    0.714  0.326  0.168     12.5 
+##  2     1 one_day          4     7      11    0.882 -0.692  0.715     17.6 
+##  3     1 one_day          4     7      12    0.619  0.321  0.167     16.3 
+##  4     1 one_day          4     7      13    1.00  -0.368  1.03      16.3 
+##  5     1 one_day          4     7      14    0.644  0.310  0.0000100 18.5 
+##  6     1 one_day          4     7      15    0.253  0.426  0.0000100 25.1 
+##  7     1 one_day          4     7      16    1.00  -0.350  0.113      3.35
+##  8     1 one_day          7     7      10    1.00   0.0830 0.569     11.7 
+##  9     1 one_day          7     7      11    0.888 -0.105  0.456     13.9 
+## 10     1 one_day          7     7      12    1.00  -0.260  3.00      19.6 
+## # ... with 18 more rows, and 3 more variables: warnings &lt;chr&gt;,
+## #   valGuessing &lt;dbl&gt;, pLRtest &lt;dbl&gt;</code></pre>
 </div>
 
 
