--- a/analyzeAll.html
+++ b/analyzeAll.html
@@ -580,15 +580,16 @@ maxSPE&lt;- 13 #targetSP = 3 and response position is 16```</code></pre>
 ## # Groups:   Group, Condition, targetSP, Block, Subject [6]
 ##   Group Condition targetSP Block Subject efficacy latency precision
 ##   &lt;int&gt; &lt;chr&gt;        &lt;int&gt; &lt;int&gt;   &lt;int&gt;    &lt;dbl&gt;   &lt;dbl&gt;     &lt;dbl&gt;
-## 1     1 one_day          4     1      10     1.00  -0.158 0.0000100
-## 2     1 one_day          4     1      11     1.00   1.82  4.00     
-## 3     1 one_day          4     1      12     1.00   1.50  1.47     
-## 4     1 one_day          4     1      13     1.00   0.423 0.179    
-## 5     1 one_day          4     1      14     1.00   0.286 0.0000100
-## 6     1 one_day          4     1      15     1.00  -0.262 0.0000100
+## 1     1 one_day          4     1      10    1.00   0.0775 0.0000560
+## 2     1 one_day          4     1      11    0.467 -1.31   0.0000100
+## 3     1 one_day          4     1      12    1.00   1.50   1.47     
+## 4     1 one_day          4     1      13    1.00   0.423  0.179    
+## 5     1 one_day          4     1      14    1.00  -0.250  0.0000100
+## 6     1 one_day          4     1      15    1.00   0.312  0.0000100
 ## # ... with 4 more variables: val &lt;dbl&gt;, warnings &lt;chr&gt;, valGuessing &lt;dbl&gt;,
 ## #   pLRtest &lt;dbl&gt;</code></pre>
-<p>Save estimates to file.</p>
+<p>Parameter estimates done.</p>
+<p>Estimates saved to file.</p>
 </div>
 
 
